Sat Jul  6 07:37:43 2013  Martin Bosslet  <Martin.Bosslet@gmail.com>

	* ext/openssl/ossl_pkey_ec.c: Ensure compatibility to builds of
	  OpenSSL with OPENSSL_NO_EC2M defined, but OPENSSL_NO_EC not
	  defined.
	* test/openssl/test_pkey_ec.rb: Iterate over built-in curves
	  (and assert their non-emptiness!) instead of hard-coding them, as
	  this may cause problems with respect to the different availability
	  of individual curves in individual OpenSSL builds.
	  [ruby-core:54881] [Bug #8384]

	  Thanks to Vit Ondruch for providing the patch!

Sat Jul  6 07:12:39 2013  Martin Bosslet  <Martin.Bosslet@gmail.com>

	* test/openssl/test_x509crl.rb: Remove unused variable.
	  [ruby-core:53501] [Bug #8114]

	  Thanks, Vipul Amler, for pointing this out!

Sat Jul  6 06:37:10 2013  Martin Bosslet  <Martin.Bosslet@gmail.com>

	* ext/openssl/ossl.c: Provide CRYPTO_set_locking_callback() and
	  CRYPTO_set_id_callback() callback functions ossl_thread_id and
	  ossl_lock_callback to ensure the OpenSSL extension is usable in
	  multi-threaded environments.
	  [ruby-core:54900] [Bug #8386]

	  Thanks, Dirkjan Bussink, for the patch!

Sat Jul  6 06:06:16 2013  Martin Bosslet  <Martin.Bosslet@gmail.com>

	* lib/openssl/ssl.rb: Fix SSL client connection crash for SAN marked
	  critical.
	  The patch for CVE-2013-4073 caused SSL crash when a SSL server returns
	  the certificate that has critical SAN value.  X509 extension could
	  include 2 or 3 elements in it:

	  [id, criticality, octet_string] if critical,
	  [id, octet_string] if not.

	  Making sure to pick the last element of X509 extension and use it as
	  SAN value.
	  [ruby-core:55685] [Bug #8575]

	  Thank you @nahi for providing the patch!

Sat Jul  6 04:49:38 2013  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych/visitors/yaml_tree.rb: register time objects so
	  they are referenced as ids during output.
	* test/psych/test_date_time.rb: corresponding test.
